fix: info-grid text block overlaps image with visible photo below

--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -467,23 +467,25 @@
     }
 
     @media (min-width: breakpoint(l)) {
+        padding-bottom: 22rem;
+
         &__cards {
             gap: space(m);
             grid-template-columns: repeat(3, 1fr);
-            padding: space(l) space(m) space(xxl);
+            padding: space(l) space(m) space(l);
             width: 80%;
         }
 
         &__card {
             border-bottom: 0;
-            padding-bottom: space(xxl);
+            padding-bottom: 0;
         }
 
         &__bg {
             bottom: 0;
             display: block;
             filter: brightness(0.75);
-            height: 100%;
+            height: 70%;
             left: 0;
             object-fit: cover;
             position: absolute;
@@ -494,7 +496,7 @@
         &__shape {
             bottom: 0;
             display: block;
-            height: 100%;
+            height: 70%;
             left: 0;
             position: absolute;
             z-index: 0;
